infrastructure/kubernetes/argocd/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    name: argocd
    purpose: gitops
    platform: cnoe
